# fynet

./: CMakeLists.txt  README.rst
fynet/: cell.hpp  fynet.hpp  fynet_backend.hpp  fynet_config.hpp  sigmoid.hpp
test/: mul.cpp
